compatible with all version

--- a/gradle.properties
+++ b/gradle.properties
@@ -13,3 +13,5 @@ org.gradle.jvmargs=-Xmx1536m
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+gradle.publish.key=SxIfZIU4HtsZmXRZxP9C357saaMrCiWb
+gradle.publish.secret=Yls8Rle0VhoFtw59Hadvpzgqx2T9aW0B
