--- a/local.properties
+++ b/local.properties
@@ -6,3 +6,5 @@
 # header note.
 #Tue Oct 15 14:07:19 IST 2019
 sdk.dir=/Users/amit/Library/Android/sdk
+bintray.user=amit6061
+bintray.apikey=a00ac6b6e6901a6dcccf5c31dcd764d76c13232f
