--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.2'
+        classpath 'com.android.tools.build:gradle:3.5.3'
 
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -24,6 +24,8 @@ allprojects {
         flatDir {
             dirs 'aars'
         }
+        mavenCentral()
+        maven { url "https://raw.github.com/synergian/wagon-git/releases"}
     }
 }
 
