handle notifcation data

--- a/izooto/build.gradle
+++ b/izooto/build.gradle
@@ -1,7 +1,8 @@
 apply plugin: 'com.android.library'
-apply plugin: 'com.github.dcendents.android-maven'
-apply plugin: 'com.jfrog.bintray'
-apply plugin: 'android-maven'
+//apply plugin: 'com.github.dcendents.android-maven'
+//apply plugin: 'com.jfrog.bintray'
+//apply plugin: 'android-maven'
+apply from: 'maven-push.gradle'
 
 android {
 
@@ -24,7 +25,7 @@ android {
 buildscript {
     repositories {
         jcenter()
-        mavenLocal()
+        mavenCentral()
 
     }
     dependencies {
@@ -37,116 +38,116 @@ buildscript {
 }
 
 
-install {
-    repositories.mavenInstaller {
-        pom.groupId = 'com.izooto'
-        pom.version = '1.0.4'
-        pom.artifactId = 'android-sdk'
-    }
-}
+//install {
+//    repositories.mavenInstaller {
+//        pom.groupId = 'com.izooto'
+//        pom.version = '1.0.4'
+//        pom.artifactId = 'android-sdk'
+//    }
+//}
 
 
-ext {
-    bintrayRepo = 'iZooto-android-sdk'
-    bintrayName = 'com.izooto'
-    publishedGroupId = 'com.izooto'
-    libraryName = 'android-sdk'
-    artifact = 'android-sdk' //This artifact name should be the same with library module name
-    libraryDescription = 'A push notification service which integrates with your app seamlessly'
+//ext {
+//    bintrayRepo = 'iZooto-android-sdk'
+//    bintrayName = 'com.izooto'
+//    publishedGroupId = 'com.izooto'
+//    libraryName = 'android-sdk'
+//    artifact = 'android-sdk' //This artifact name should be the same with library module name
+//    libraryDescription = 'A push notification service which integrates with your app seamlessly'
+//
+//    siteUrl = 'https://github.com/amit6061/iZooto-android-sdk'
+//    gitUrl = 'https://github.com/amit6061/iZooto-android-sdk.git'
+//    libraryVersion = '1.0.3'
+//
+//    developerId = 'amit6061'
+//    developerName = 'amit'
+//    developerEmail = 'amit@datability.co'
+//    organization = 'izooto' // if you push to organization's repository.
+//    licenseName = 'The Apache Software License, Version 2.0'  //Example for license
+//    licenseUrl = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+//    allLicenses = ["Apache-2.0"]
+//}
 
-    siteUrl = 'https://github.com/amit6061/iZooto-android-sdk'
-    gitUrl = 'https://github.com/amit6061/iZooto-android-sdk.git'
-    libraryVersion = '1.0.3'
+//group = publishedGroupId
+//version = libraryVersion
 
-    developerId = 'amit6061'
-    developerName = 'amit'
-    developerEmail = 'amit@datability.co'
-    organization = 'izooto' // if you push to organization's repository.
-    licenseName = 'The Apache Software License, Version 2.0'  //Example for license
-    licenseUrl = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
-    allLicenses = ["Apache-2.0"]
-}
-
-group = publishedGroupId
-version = libraryVersion
-
-install {
-    repositories.mavenInstaller {
-        pom.project {
-            packaging 'aar'
-            groupId publishedGroupId
-            artifactId artifact
-
-            name libraryName
-            description libraryDescription
-            url siteUrl
-
-            licenses {
-                license {
-                    name licenseName
-                    url licenseUrl
-                }
-            }
-            developers {
-                developer {
-                    id developerId
-                    name developerName
-                    email developerEmail
-                }
-            }
-            scm {
-                connection gitUrl
-                developerConnection gitUrl
-                url siteUrl
-            }
-        }
-    }
-}
-
-task sourcesJar(type: Jar) {
-    classifier = 'sources'
-    from android.sourceSets.main.java.srcDirs
-}
-
-task javadoc(type: Javadoc) {
-    source = android.sourceSets.main.java.srcDirs
-    classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
-}
-
-task javadocJar(type: Jar, dependsOn: javadoc) {
-    classifier = 'javadoc'
-    from javadoc.destinationDir
-}
-
-artifacts {
-    archives javadocJar
-    archives sourcesJar
-}
+//install {
+//    repositories.mavenInstaller {
+//        pom.project {
+//            packaging 'aar'
+//            groupId publishedGroupId
+//            artifactId artifact
+//
+//            name libraryName
+//            description libraryDescription
+//            url siteUrl
+//
+//            licenses {
+//                license {
+//                    name licenseName
+//                    url licenseUrl
+//                }
+//            }
+//            developers {
+//                developer {
+//                    id developerId
+//                    name developerName
+//                    email developerEmail
+//                }
+//            }
+//            scm {
+//                connection gitUrl
+//                developerConnection gitUrl
+//                url siteUrl
+//            }
+//        }
+//    }
+//}
+//
+//task sourcesJar(type: Jar) {
+//    classifier = 'sources'
+//    from android.sourceSets.main.java.srcDirs
+//}
+//
+//task javadoc(type: Javadoc) {
+//    source = android.sourceSets.main.java.srcDirs
+//    classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
+//}
+//
+//task javadocJar(type: Jar, dependsOn: javadoc) {
+//    classifier = 'javadoc'
+//    from javadoc.destinationDir
+//}
+//
+//artifacts {
+//    archives javadocJar
+//    archives sourcesJar
+//}
 
 Properties properties = new Properties()
 properties.load(project.rootProject.file('local.properties').newDataInputStream())
 
-bintray {
-    user = properties.getProperty("bintray.user")
-    key = properties.getProperty("bintray.apikey")
-
-    configurations = ['archives']
-    pkg {
-        repo = bintrayRepo
-        name = bintrayName
-        desc = libraryDescription
-        websiteUrl = siteUrl
-        vcsUrl = gitUrl
-        licenses = allLicenses
-        dryRun = false
-        publish = true
-        override = false
-        publicDownloadNumbers = true
-        version {
-            desc = libraryDescription
-        }
-    }
-}
+//bintray {
+//    user = properties.getProperty("bintray.user")
+//    key = properties.getProperty("bintray.apikey")
+//
+//    configurations = ['archives']
+//    pkg {
+//        repo = bintrayRepo
+//        name = bintrayName
+//        desc = libraryDescription
+//        websiteUrl = siteUrl
+//        vcsUrl = gitUrl
+//        licenses = allLicenses
+//        dryRun = false
+//        publish = true
+//        override = false
+//        publicDownloadNumbers = true
+//        version {
+//            desc = libraryDescription
+//        }
+//    }
+//}
 subprojects {
     tasks.withType(Javadoc).all { enabled = false }
 }
