Gradle file handled

--- a/gradle.properties
+++ b/gradle.properties
@@ -13,7 +13,7 @@ org.gradle.jvmargs=-Xmx1536m
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
-gradle.publish.key=SxIfZIU4HtsZmXRZxP9C357saaMrCiWb
-gradle.publish.secret=Yls8Rle0VhoFtw59Hadvpzgqx2T9aW0B
-bintray.user=amit6061
-bintray.apikey=a00ac6b6e6901a6dcccf5c31dcd764d76c13232f
+#gradle.publish.key=SxIfZIU4HtsZmXRZxP9C357saaMrCiWb
+#gradle.publish.secret=Yls8Rle0VhoFtw59Hadvpzgqx2T9aW0B
+#bintray.user=amit6061
+#bintray.apikey=a00ac6b6e6901a6dcccf5c31dcd764d76c13232f
