Uploaded the bintray module

--- a/gradle.properties
+++ b/gradle.properties
@@ -15,5 +15,5 @@ org.gradle.jvmargs=-Xmx1536m
 # org.gradle.parallel=true
 #gradle.publish.key=SxIfZIU4HtsZmXRZxP9C357saaMrCiWb
 #gradle.publish.secret=Yls8Rle0VhoFtw59Hadvpzgqx2T9aW0B
-#bintray.user=amit6061
-#bintray.apikey=a00ac6b6e6901a6dcccf5c31dcd764d76c13232f
+bintray.user=amit6061
+bintray.apikey=a00ac6b6e6901a6dcccf5c31dcd764d76c13232f
