--- a/local.properties
+++ b/local.properties
@@ -6,5 +6,5 @@
 # header note.
 #Tue Oct 15 14:07:19 IST 2019
 sdk.dir=/Users/amit/Library/Android/sdk
-bintray.user=amit6061
-bintray.apikey=a00ac6b6e6901a6dcccf5c31dcd764d76c13232f
+bintray.user=izooto
+bintray.apikey=61fafe3eea92b9de65d1a952779e1ca00288cd1d
