Remove the static data and create a AppConstant file

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,9 +11,7 @@ android {
         versionName "1.0.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         manifestPlaceholders = [
-                izooto_enc_key: 'b07dfa9d56fc64df',
-                izooto_app_id : "41882" ,//STAGING
-//                izooto_app_id : "27179"  //PRODUCTION
+                izooto_app_id : 40493
         ]
     }
 
