--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,9 +28,9 @@
             </intent-filter>
         </activity>
 
-        <meta-data
-            android:name="izooto_enc_key"
-            android:value="${izooto_enc_key}" />
+<!--        <meta-data-->
+<!--            android:name="izooto_enc_key"-->
+<!--            android:value="${izooto_enc_key}" />-->
 
         <meta-data
             android:name="izooto_app_id"
