--- a/izooto/build.gradle
+++ b/izooto/build.gradle
@@ -44,13 +44,7 @@ buildscript {
 }
 
 
-//install {
-//    repositories.mavenInstaller {
-//        pom.groupId = 'com.izooto'
-//        pom.version = '1.0.4'
-//        pom.artifactId = 'android-sdk'
-//    }
-//}
+
 publishing {
     publications {
         bar(MavenPublication) {
@@ -92,6 +86,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     //noinspection GradleCompatible
     //implementation 'com.android.support:appcompat-v7:28.0.0'
+  //  implementation 'com.google.firebase:firebase-messaging:20.1.6'
 
     implementation 'com.google.firebase:firebase-messaging:20.1.0'
    // implementation 'com.google.firebase:firebase-messaging:17.6.0'
