--- a/izooto/build.gradle
+++ b/izooto/build.gradle
@@ -16,8 +16,8 @@ android {
     defaultConfig {
         minSdkVersion 18
         targetSdkVersion 29
-        versionCode 3
-        versionName "1.0.3"
+        versionCode 4
+        versionName "1.0.4"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -87,6 +87,8 @@ dependencies {
     //noinspection GradleCompatible
     //implementation 'com.android.support:appcompat-v7:28.0.0'
   //  implementation 'com.google.firebase:firebase-messaging:20.1.6'
+   implementation 'com.google.android.gms:play-services-ads-identifier:16.0.0'
+    // implementation 'com.google.android.gms:play-services-ads-identifier:17.0.0';
 
     implementation 'com.google.firebase:firebase-messaging:20.1.0'
    // implementation 'com.google.firebase:firebase-messaging:17.6.0'
