WebView Bug Fixes

--- a/izooto/src/main/AndroidManifest.xml
+++ b/izooto/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         <activity
             android:name="com.izooto.WebViewActivity"
             android:screenOrientation="portrait"
-            android:exported="true"
+            android:exported="false"
             android:launchMode="singleTask" />
         <meta-data android:name="android.webkit.WebView.EnableSafeBrowsing"
             android:value="true" />
