--- a/izooto/build.gradle
+++ b/izooto/build.gradle
@@ -14,10 +14,10 @@ def getArtificatId = { ->
 android {
     compileSdkVersion 29
     defaultConfig {
-        minSdkVersion 16
+        minSdkVersion 18
         targetSdkVersion 29
-        versionCode 5
-        versionName "1.0.5"
+        versionCode 6
+        versionName "1.0.6"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -83,11 +83,11 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     //noinspection GradleCompatible
    // implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
     //noinspection GradleCompatible
     //implementation 'com.android.support:appcompat-v7:28.0.0'
   //  implementation 'com.google.firebase:firebase-messaging:20.1.6'
-   implementation 'com.google.android.gms:play-services-ads-identifier:16.0.0'
+   //implementation 'com.google.android.gms:play-services-ads-identifier:16.0.0'
     // implementation 'com.google.android.gms:play-services-ads-identifier:17.0.0';
 
     implementation 'com.google.firebase:firebase-messaging:20.1.0'
