--- a/izooto/build.gradle
+++ b/izooto/build.gradle
@@ -4,7 +4,7 @@ apply plugin: 'maven-publish' // Apply this plugin at the top of your library bu
 def githubProperties = new Properties()
 githubProperties.load(new FileInputStream(rootProject.file("github.properties"))) //Set env variable GPR_USER & GPR_API_KEY if not adding a properties file
 def getVersionName = { ->
-    return "1.0.5" // Replace with version Name
+    return "1.0.7" // Replace with version Name
 }
 def getArtificatId = { ->
     return "iZootoAndroidSDK" // Replace with library name ID
@@ -16,8 +16,8 @@ android {
     defaultConfig {
         minSdkVersion 18
         targetSdkVersion 29
-        versionCode 6
-        versionName "1.0.6"
+        versionCode 7
+        versionName "1.0.7"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -89,6 +89,7 @@ dependencies {
   //  implementation 'com.google.firebase:firebase-messaging:20.1.6'
    //implementation 'com.google.android.gms:play-services-ads-identifier:16.0.0'
     // implementation 'com.google.android.gms:play-services-ads-identifier:17.0.0';
+    implementation 'com.google.android.gms:play-services-ads-identifier:17.0.0'
 
     implementation 'com.google.firebase:firebase-messaging:20.1.0'
    // implementation 'com.google.firebase:firebase-messaging:17.6.0'
