--- a/local.properties
+++ b/local.properties
@@ -4,7 +4,7 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Jun 26 12:10:29 IST 2020
+#Mon Sep 28 12:13:12 IST 2020
 bintray.apikey=61fafe3eea92b9de65d1a952779e1ca00288cd1d
-sdk.dir=C\:\\Users\\Amit\\AppData\\Local\\Android\\Sdk
+sdk.dir=/Users/amit/Library/Android/sdk
 bintray.user=izooto
