--- a/gradle.properties
+++ b/gradle.properties
@@ -15,5 +15,25 @@ org.gradle.jvmargs=-Xmx1536m
 # org.gradle.parallel=true
 #gradle.publish.key=SxIfZIU4HtsZmXRZxP9C357saaMrCiWb
 #gradle.publish.secret=Yls8Rle0VhoFtw59Hadvpzgqx2T9aW0B
-bintray.user=izooto
-bintray.apikey=61fafe3eea92b9de65d1a952779e1ca00288cd1d
+POM_NAME=android-sdk
+POM_ARTIFACT_ID=android-sdk
+POM_PACKAGING=aar
+VERSION_NAME=1.1.0
+VERSION_CODE=1
+GROUP=com.izooto
+POM_DESCRIPTION=iZooto Push Notification
+POM_URL=https://github.com/izooto-mobile-sdk/android-X
+POM_SCM_URL=https://github.com/izooto-mobile-sdk/android-X
+POM_SCM_CONNECTION=scm:https://github.com/izooto-mobile-sdk/android-X.git
+POM_SCM_DEV_CONNECTION=scm:https://github.com/izooto-mobile-sdk/android-X.git
+POM_LICENCE_NAME=MIT License
+POM_LICENCE_URL=https://raw.githubusercontent.com/izooto-mobile-sdk/android-X/master/LICENSE
+POM_LICENCE_DIST=android-X
+POM_DEVELOPER_ID=iZootoAndroidSDK
+POM_DEVELOPER_NAME=Amit kumar Gupta
+NEXUS_USERNAME=iZootoAndroidSDK
+NEXUS_PASSWORD=iZooto@12345
+signing.keyId=D8C27984
+signing.password=iZooto@123#
+signing.secretKeyRingFile=/Users/amit/.gnupg/secring.gpg
+org.gradle.daemon=true
