--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,11 +7,11 @@ android {
         applicationId "com.app.izoototest"
         minSdkVersion 16
         targetSdkVersion 29
-        versionCode 10
-        versionName "1.0.10"
+        versionCode 11
+        versionName "1.0.11"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         manifestPlaceholders = [
-                                izooto_app_id: "561db654d15610905f253c77d03ba350809dc7e9"//
+                                izooto_app_id: "561db654d15610905f253c77d03ba350809dc7e9"
         ]
     }
 
