--- a/izooto/src/main/AndroidManifest.xml
+++ b/izooto/src/main/AndroidManifest.xml
@@ -71,12 +71,12 @@
             </intent-filter>
         </service>
         <service
-            android:name=".BackgroundJobIntentService"
+            android:name=".iZootoJobIntentService"
             android:permission="android.permission.BIND_JOB_SERVICE"
             android:exported="true">
         </service>
 
-        <receiver android:name=".BackgroundReceiver"
+        <receiver android:name=".iZootoBackgroundReceiver"
             android:enabled="true"
             android:exported="true">
             <intent-filter>
