--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,8 +11,8 @@ android {
         versionName "1.1.3"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         manifestPlaceholders = [
-                izooto_app_id: "09f06385e06cc10d0fc7a5e1c002cd9338a2c94f"//"09f06385e06cc10d0fc7a5e1c002cd9338a2c94f"// "561db654d15610905f253c77d03ba350809dc7e9"
-        ]
+                izooto_app_id: "09f06385e06cc10d0fc7a5e1c002cd9338a2c94f"
+                ]
     }
 
     buildTypes {
