--- a/gradle.properties
+++ b/gradle.properties
@@ -19,7 +19,7 @@ POM_NAME=android-sdk
 POM_ARTIFACT_ID=android-sdk
 POM_PACKAGING=aar
 VERSION_NAME=1.1.8
-VERSION_CODE=7
+VERSION_CODE=8
 GROUP=com.izooto
 POM_DESCRIPTION=Push Notification Services
 POM_URL=https://github.com/izooto-mobile-sdk/android-X
@@ -31,4 +31,9 @@ POM_LICENCE_URL=https://raw.githubusercontent.com/izooto-mobile-sdk/android-X/ma
 POM_LICENCE_DIST=android-X
 POM_DEVELOPER_ID=iZootoAndroidSDK
 POM_DEVELOPER_NAME=Amit kumar Gupta
-
+NEXUS_USERNAME=iZootoAndroidSDK
+NEXUS_PASSWORD=iZooto@12345
+signing.keyId=4B7CBF72
+signing.password=iZooto@1234#
+signing.secretKeyRingFile=/Users/amit/.gnupg/secring.gpg
+org.gradle.daemon=true
