--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,5 +40,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
     implementation  'com.google.firebase:firebase-messaging:23.0.0'
+    implementation 'androidx.browser:browser:1.4.0'
+
 }
 apply plugin: 'com.google.gms.google-services'
