--- a/izooto/build.gradle
+++ b/izooto/build.gradle
@@ -23,6 +23,7 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'androidx.appcompat:appcompat:1.3.1'
     api 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.browser:browser:1.4.0'
     testImplementation 'org.testng:testng:7.3.0'
     implementation "androidx.cardview:cardview:1.0.0"
     implementation 'com.google.android.gms:play-services-ads-identifier:17.1.0'
@@ -34,6 +35,13 @@ dependencies {
     testImplementation 'org.testng:testng:7.3.0'
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'androidx.work:work-runtime-ktx:2.7.0'
+  //  api ("androidx.browser:browser:1.4.0")
+
+    configurations.all {
+        resolutionStrategy {
+            force 'androidx.browser:browser:1.4.0'
+        }
+    }
 
 }
 apply from: 'maven-push.gradle'
