--- a/izooto/build.gradle
+++ b/izooto/build.gradle
@@ -4,8 +4,8 @@ android {
     defaultConfig {
         minSdkVersion 19
         targetSdkVersion 31
-        versionCode 18
-        versionName "1.3.4"
+        versionCode 21
+        versionName "1.4.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -21,13 +21,12 @@ android {
 }
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation 'androidx.appcompat:appcompat:1.4.0'
     api 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.browser:browser:1.4.0'
     testImplementation 'org.testng:testng:7.3.0'
     implementation "androidx.cardview:cardview:1.0.0"
     implementation 'com.google.android.gms:play-services-ads-identifier:17.1.0'
-    // handle the all latest version in FCM
     implementation platform('com.google.firebase:firebase-bom:29.0.0')
     implementation 'com.google.firebase:firebase-messaging'
     implementation files('libs/MiPush_SDK_Client_4_8_3.jar')
@@ -35,13 +34,8 @@ dependencies {
     testImplementation 'org.testng:testng:7.3.0'
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'androidx.work:work-runtime-ktx:2.7.1'
-  //  api ("androidx.browser:browser:1.4.0")
+    api 'androidx.browser:browser:1.4.0'
 
-    configurations.all {
-        resolutionStrategy {
-            force 'androidx.browser:browser:1.4.0'
-        }
-    }
 
 }
 apply from: 'maven-push.gradle'
