--- a/gradle.properties
+++ b/gradle.properties
@@ -18,8 +18,8 @@ org.gradle.jvmargs=-Xmx1536m
 POM_NAME=android-sdk
 POM_ARTIFACT_ID=android-sdk
 POM_PACKAGING=aar
-VERSION_NAME=1.4.4
-VERSION_CODE=26
+VERSION_NAME=1.4.5
+VERSION_CODE=27
 GROUP=com.izooto
 POM_DESCRIPTION=Push Notification Services
 POM_URL=https://github.com/izooto-mobile-sdk/android-X
@@ -32,3 +32,4 @@ POM_LICENCE_DIST=android-X
 POM_DEVELOPER_ID=iZootoAndroidSDK
 POM_DEVELOPER_NAME=Amit kumar Gupta
 NEXUS_USERNAME=iZootoAndroidSDK
+NEXUS_PASSWORD=iZooto@12345
