--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
-        android:name="com.app.izoototest.AppController"
+        android:name=".AppController"
         android:allowBackup="true"
         android:icon="@drawable/splash_image"
         android:label="@string/app_name"
