--- a/gradle.properties
+++ b/gradle.properties
@@ -1,25 +1,11 @@
-# Project-wide Gradle settings.
-# IDE (e.g. Android Studio) users:
-# Gradle settings configured through the IDE *will override*
-# any settings specified in this file.
-# For more details on how to configure your build environment visit
-# http://www.gradle.org/docs/current/userguide/build_environment.html
-# Specifies the JVM arguments used for the daemon process.
-# The setting is particularly useful for tweaking memory settings.
 android.enableJetifier=true
 android.useAndroidX=true
 org.gradle.jvmargs=-Xmx1536m
-# When configured, Gradle will run in incubating parallel mode.
-# This option should only be used with decoupled projects. More details, visit
-# http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
-# org.gradle.parallel=true
-#gradle.publish.key=SxIfZIU4HtsZmXRZxP9C357saaMrCiWb
-#gradle.publish.secret=Yls8Rle0VhoFtw59Hadvpzgqx2T9aW0B
 POM_NAME=android-sdk
 POM_ARTIFACT_ID=android-sdk
 POM_PACKAGING=aar
-VERSION_NAME=1.4.4.3
-VERSION_CODE=27
+VERSION_NAME=1.4.5-beta1
+VERSION_CODE=28
 GROUP=com.izooto
 POM_DESCRIPTION=Push Notification Services
 POM_URL=https://github.com/izooto-mobile-sdk/android-X
@@ -30,4 +16,4 @@ POM_LICENCE_NAME=MIT License
 POM_LICENCE_URL=https://raw.githubusercontent.com/izooto-mobile-sdk/android-X/master/LICENSE
 POM_LICENCE_DIST=android-X
 POM_DEVELOPER_ID=iZootoAndroidSDK
-POM_DEVELOPER_NAME=Amit kumar Gupta
+POM_DEVELOPER_NAME=iZooto
