--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.app.izoototest">
-    <uses-permission android:name="android.permission.BROADCAST_CLOSE_SYSTEM_DIALOGS" />
+    <uses-permission android:name="android.permission.BROADCAST_CLOSE_SYSTEM_DIALOGS"
+        tools:ignore="ProtectedPermissions" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.VIBRATE" />
@@ -11,10 +12,10 @@
     <application
         android:name=".AppController"
         android:allowBackup="true"
-        android:icon="@drawable/splash_image"
         android:label="@string/app_name"
-        android:roundIcon="@drawable/splash_image"
+        android:icon="@drawable/ic_iz_dn_icon"
         android:supportsRtl="true"
+        android:roundIcon="@drawable/ic_iz_dn_icon"
         android:theme="@style/AppTheme">
         <activity
             android:name="com.app.izoototest.MainActivity"
@@ -26,12 +27,8 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity> <!-- <meta-data -->
-        <!-- android:name="izooto_enc_key" -->
-        <!-- android:value="${izooto_enc_key}" /> -->
-<!--        <meta-data-->
-<!--            android:name="izooto_app_id"-->
-<!--            android:value="${izooto_app_id}" />-->
+        </activity>
+
     </application>
 
 </manifest>
