--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,9 @@
         android:name=".AppController"
         android:allowBackup="true"
         android:label="@string/app_name"
-        android:icon="@drawable/ic_iz_dn_icon"
+        android:icon="@drawable/ic_bell"
         android:supportsRtl="true"
-        android:roundIcon="@drawable/ic_iz_dn_icon"
+        android:roundIcon="@drawable/ic_bell"
         android:theme="@style/AppTheme">
         <activity
             android:name="com.app.izoototest.MainActivity"
