React-native and Flutter black issues fixed

--- a/gradle.properties
+++ b/gradle.properties
@@ -5,8 +5,8 @@ org.gradle.jvmargs=-Xmx1536m
 POM_NAME=android-sdk
 POM_ARTIFACT_ID=android-sdk
 POM_PACKAGING=aar
-VERSION_NAME=1.5.4
-VERSION_CODE=33
+VERSION_NAME=1.5.5
+VERSION_CODE=34
 GROUP=com.izooto
 POM_DESCRIPTION=Push Notification Services
 POM_URL=https://github.com/izooto-mobile-sdk/android-X
@@ -15,5 +15,8 @@ POM_SCM_CONNECTION=scm:https://github.com/izooto-mobile-sdk/android-X.git
 POM_SCM_DEV_CONNECTION=scm:https://github.com/izooto-mobile-sdk/android-X.git
 POM_LICENCE_NAME=MIT License
 POM_LICENCE_URL=https://raw.githubusercontent.com/izooto-mobile-sdk/android-X/master/LICENSE
+POM_LICENCE_DIST=android-X
+POM_DEVELOPER_ID=iZootoAndroidSDK
+POM_DEVELOPER_NAME=Amit kumar Gupta
 
 
