--- a/gradle.properties
+++ b/gradle.properties
@@ -18,5 +18,10 @@ POM_LICENCE_URL=https://raw.githubusercontent.com/izooto-mobile-sdk/android-X/ma
 POM_LICENCE_DIST=android-X
 POM_DEVELOPER_ID=iZootoAndroidSDK
 POM_DEVELOPER_NAME=Amit kumar Gupta
-
+NEXUS_USERNAME=iZootoAndroidSDK
+NEXUS_PASSWORD=iZooto@12345
+signing.keyId=6EE60A1D
+signing.password=iZooto@1234#
+signing.secretKeyRingFile=/Users/amit_sdk_develoer/.gnupg/secring.gpg
+org.gradle.daemon=true
 
