HMS issues fixed

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,6 @@
 android.enableJetifier=true
 android.useAndroidX=true
 org.gradle.jvmargs=-Xmx1536m
+
+signing.secretKeyRingFile=/Users/amit_sdk_develoer/.gnupg/secring.gpg
+org.gradle.daemon=true
