--- a/izooto/build.gradle
+++ b/izooto/build.gradle
@@ -25,14 +25,13 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.4.1'
     api 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.android.material:material:1.6.0'
-    implementation 'com.google.android.gms:play-services-ads-identifier:18.0.1'
-    implementation 'com.google.firebase:firebase-messaging:23.1.2'
+    compileOnly 'com.google.android.gms:play-services-ads-identifier:18.0.1'
+    compileOnly 'com.google.firebase:firebase-messaging:23.1.2'
     compileOnly 'com.huawei.hms:push:6.7.0.300'
     testImplementation 'org.testng:testng:7.4.0'
     compileOnly 'com.github.bumptech.glide:glide:4.16.0'
-    implementation files('libs/MiPush_SDK_Client_5_1_1-G.jar')
     //noinspection GradleCompatible
-    implementation 'androidx.browser:browser:1.7.0'
+    compileOnly 'androidx.browser:browser:1.7.0'
 // Credential Manager API
     compileOnly("androidx.credentials:credentials:1.2.0")
     compileOnly("androidx.credentials:credentials-play-services-auth:1.2.0")
