--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,7 +33,7 @@ dependencies {
     implementation  'com.google.firebase:firebase-messaging:23.1.2'
     implementation 'com.google.android.material:material:1.6.0'
     implementation 'com.android.support:multidex:1.0.3'
-    implementation 'com.github.bumptech.glide:glide:4.16.0'
+    compileOnly('com.github.bumptech.glide:glide:4.16.0')
 
 
 }
