--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,8 +33,8 @@ dependencies {
     implementation  'com.google.firebase:firebase-messaging:23.1.2'
     implementation 'com.google.android.material:material:1.6.0'
     implementation 'com.android.support:multidex:1.0.3'
-    compileOnly('com.github.bumptech.glide:glide:4.16.0')
-
+    implementation('com.github.bumptech.glide:glide:4.16.0')
+    implementation('androidx.browser:browser:1.8.0')
 
 }
 apply plugin: 'com.google.gms.google-services'
