--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,11 +34,11 @@ dependencies {
     implementation 'com.google.android.material:material:1.6.0'
     implementation 'com.android.support:multidex:1.0.3'
     implementation('com.github.bumptech.glide:glide:4.16.0')
-    implementation('androidx.browser:browser:1.8.0')
-    implementation("androidx.credentials:credentials:1.2.2")
-    implementation("androidx.credentials:credentials-play-services-auth:1.2.2")
-    implementation("com.google.android.libraries.identity.googleid:googleid:1.1.0")
-    implementation("androidx.work:work-runtime:2.9.0")
+    implementation('androidx.browser:browser:1.2.0')
+   // implementation("androidx.credentials:credentials:1.2.2")
+   // implementation("androidx.credentials:credentials-play-services-auth:1.2.2")
+   // implementation("com.google.android.libraries.identity.googleid:googleid:1.1.0")
+    implementation("androidx.work:work-runtime:2.8.1")
 
 }
 apply plugin: 'com.google.gms.google-services'
