--- a/izooto/build.gradle
+++ b/izooto/build.gradle
@@ -18,7 +18,7 @@ android {
     }
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
@@ -28,33 +28,25 @@ android {
     }
 
 
-    buildFeatures {
-        viewBinding true
-    }
-
 }
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    api 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'com.google.android.material:material:1.12.0'
+    implementation 'com.google.android.material:material:1.6.0'
     testImplementation 'org.testng:testng:7.4.0'
-    implementation "androidx.cardview:cardview:1.0.0"
-    implementation "com.google.android.gms:play-services-ads-identifier:18.1.0"
+    implementation "com.google.android.gms:play-services-ads-identifier:18.0.1"
     // handle the all latest version in FCM
-    compileOnly platform('com.google.firebase:firebase-bom:33.0.0')
-    compileOnly 'com.google.firebase:firebase-messaging'
+    compileOnly 'com.google.firebase:firebase-messaging:23.1.2'
     compileOnly "com.huawei.hms:push:6.11.0.300"
     testImplementation 'org.testng:testng:7.4.0'
     implementation 'androidx.work:work-runtime:2.9.0'
-    compileOnly 'com.github.bumptech.glide:glide:4.16.0'
     // Credential Manager API
     compileOnly("androidx.credentials:credentials:1.2.2")
     compileOnly("androidx.credentials:credentials-play-services-auth:1.2.2")
     compileOnly("com.google.android.libraries.identity.googleid:googleid:1.1.0")
-    compileOnly 'androidx.browser:browser:1.8.0'
+    compileOnly 'androidx.browser:browser:1.7.0'
 
 }
 //apply from: 'publish-remote.gradle'
