--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,8 @@ dependencies {
    // implementation("androidx.credentials:credentials-play-services-auth:1.2.2")
    // implementation("com.google.android.libraries.identity.googleid:googleid:1.1.0")
     implementation("androidx.work:work-runtime:2.8.1")
+    implementation ('com.comscore:android-analytics:6.11.1')
+    implementation ('com.google.android.gms:play-services-appset:16.1.0')
 
 }
 apply plugin: 'com.google.gms.google-services'
